# whooing-tui

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml  whooing-tui.toml.example  whooing.py
core/: CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
core/src/whooing_core/: __init__.py  attachments.py  db.py  dupes.py  entries_cache.py  hangul.py  preview.py  recurring.py  revisions.py
core/src/whooing_core/csv_adapters/: __init__.py  base.py  hyundai_card.py  kookmin_card.py  samsung_card.py  shinhan_card.py
core/src/whooing_core/html_adapters/: __init__.py  base.py  hanacard_secure_mail.py  hyundaicard_secure_mail.py
core/src/whooing_core/pdf_adapters/: __init__.py  base.py  decrypt.py  hyundai_card.py  shinhan_card.py
core/src/whooing_core/receipt/: __init__.py  extractor.py
core/tests/: test_attachments.py  test_csv_adapters.py  test_db.py  test_dupes.py  test_entries_cache.py  test_hanacard_secure_mail.py  test_hangul.py  test_hyundaicard_secure_mail.py  test_pdf_adapters.py  test_pdf_decrypt.py  test_preview.py  test_receipt_extractor.py  test_recurring.py  test_revisions.py
docs/: CODE-REVIEW-2026-06.md  (+4 more)
mcp/: .env.example  CHANGELOG.md  DESIGN.md  Makefile  README.md  pyproject.toml  whooing-mcp.toml.example
mcp/.github/workflows/: ci.yml
mcp/examples/: claude_desktop_config.json
mcp/src/whooing_mcp/: __init__.py  __main__.py  annotations.py  attachments.py  auth.py  client.py  config.py  dates.py  errors.py  models.py  official_mcp.py  p4_sync.py  queue.py  server.py
mcp/src/whooing_mcp/parsers/: __init__.py
mcp/src/whooing_mcp/parsers/sms/: __init__.py  base.py  hyundai_card.py  kakaobank.py  kookmin_card.py  samsung_card.py  shinhan_card.py  toss.py  woori_bank.py
mcp/src/whooing_mcp/tools/: __init__.py  audit.py  category.py  dedup.py  delete.py  monthly_close.py  pending.py  reconcile.py  sms.py
mcp/tests/: _decrypt_hanacard_html.py  _live_smoke.py  _make_pdf_fixture.py  _pdf_import_2026_04.py  _probe_s9046.py  conftest.py  test_audit.py  test_auth.py  test_category.py  test_config.py  test_dates.py  test_dedup.py  test_delete_entries.py  test_errors.py  test_monthly_close.py  test_official_mcp.py  test_p4_sync.py  test_queue.py  test_rate_limit.py  test_reconcile.py  test_server_env.py  test_sms_parsers.py
mcp/tests/fixtures/: entries_sample.json  sections_sample.json
mcp/tests/fixtures/csv/: hyundai_sample.csv  kookmin_sample.csv  samsung_sample.csv  shinhan_sample.csv
mcp/tests/fixtures/sms/: hyundai_installment.txt  hyundai_web_multiline.txt  kakaobank_standard.txt  kookmin_push_oneline.txt  kookmin_standard.txt  samsung_push_oneline.txt  samsung_standard.txt  shinhan_installment.txt  shinhan_push_oneline.txt  shinhan_web_multiline.txt  toss_oneline.txt  tosscard_approve.txt  unsupported_random.txt  woori_check.txt
mcp/tools/: migrate-to-shared-data-dir.py
tui/: CHANGELOG-archive-0.17.md  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml  whooing-tui.toml.example
tui/src/whooing_tui/: __init__.py  actions.py  app.py  auth.py  cache.py  cli.py  client.py  config.py  constants.py  data.py  dates.py  dupe_scan_repo.py  errors.py  filters.py  ime.py  mcp_bridge.py  models.py  official_mcp.py  outside.py  p4_sync.py  recurring_scan_repo.py  repository.py  responses.py  revision_repo.py  server_attachments.py  state.py  sync.py  text_utils.py
tui/src/whooing_tui/screens/: __init__.py  account_flow.py  account_picker.py  accounts.py  annotator.py  attachment_browser.py  budget_edit.py  dashboard.py  dupe_eval.py  dupe_scan_overview.py  duplicate_scan.py  edit_entry.py  entries.py  entries_compact.py  entries_scan.py  file_picker.py  frequent_entries.py  goal_edit.py  help.py  home.py  monthly_entries.py  outside_inbox.py  receipt_attach.py  recurring_scan.py  report_customs.py  reports.py  revision_history.py  sections.py  statement_import.py  tag_management.py  tags_picker.py  trash.py
tui/src/whooing_tui/widgets/: __init__.py  confirm.py  hangul_input.py  input_modal.py  list_crud.py  menubar.py  status_bar.py
tui/tests/: _helpers.py  conftest.py  test_account_flow.py  test_account_picker.py  test_accounts_screen.py  test_actions.py  test_annotator.py  test_attachment_browser.py  test_attachment_import.py  test_auth.py  test_budget_edit.py  test_cache.py  test_cli.py  test_client.py  test_client_accounts_mutations.py  test_client_frequent.py  test_client_mutations.py  test_client_sections_mutations.py  test_config.py  test_constants.py  test_dashboard.py  test_data.py  test_dupe_eval.py  test_dupe_scan_repo.py  test_duplicate_scan.py  test_edit_dialog_small_screen.py  test_edit_entry_dialog.py  test_entries_compact.py  test_entries_mutate.py  test_entries_screen.py  test_entries_tag_inline.py  test_errors.py  test_export_attachments.py  test_file_picker.py  test_filters.py  test_frequent_entries.py  test_goal_edit.py  test_help_modal.py  test_helpers.py  test_ime.py  (+25 more)
(+32 files in other folders)
