[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whooing-tui"
version = "0.2.0"
description = "Textual TUI for Whooing (whooing.com) — sections / accounts / entries 를 터미널에서 빠르게 다룬다."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Woojin Kim", email = "me@woojinkim.org" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
whooing-tui = "whooing_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whooing_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
