[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whooing-mcp-server"
version = "0.2.1"
description = "MCP server for Whooing (whooing.com) — LLM 자동화 도구 14종. monorepo whooing-tui 의 mcp/ 서브패키지."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Woojin Kim", email = "me@woojinkim.org" }]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3",
    # whooing-core 는 같은 monorepo 의 sibling (../core/). monorepo 루트의
    # `make install` 이 먼저 `pip install -e core/` 를 실행하므로 별도 명시
    # 없이 그대로 import 됨 (tui/ 와 동일 패턴).
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "reportlab>=4",  # tests/_make_pdf_fixture.py — fixture 재생성 시만 필요
]

[project.scripts]
whooing-mcp = "whooing_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whooing_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
