[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whooing-tui"
version = "0.7.0"
description = "Textual TUI for Whooing (whooing.com) — sections / accounts / entries 를 터미널에서 빠르게 다룬다."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Woojin Kim", email = "me@woojinkim.org" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "textual>=0.50",
    # whooing-core 는 같은 monorepo 의 sibling 디렉터리. monorepo 루트의
    # `make install` 이 먼저 `pip install -e core/` 를 실행하므로 별도 명시
    # 불필요. 외부 consumer (예: whooing-mcp-server-wrapper) 는 git+ssh 로
    # `whooing-core` 를 따로 가져옴.
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "respx>=0.21",
]

[project.scripts]
whooing-tui = "whooing_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whooing_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
